--- a/SimplePasswordGenerator/.gitignore
+++ b/SimplePasswordGenerator/.gitignore
@@ -7,7 +7,7 @@
 /build
 /captures
 /build.gradle
-gradle.properties
-gradlew
-gradlew.bat
-settings.gradle
+/gradle.properties
+/gradlew
+/gradlew.bat
+/settings.gradle
