--- a/SimplePasswordGenerator/app/src/main/AndroidManifest.xml
+++ b/SimplePasswordGenerator/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
 
         <activity
             android:name="sebasarriola.simplepasswordgenerator.SplashScreen"
